:bug: fix: style compatibility on firefox

--- a/app/globals.css
+++ b/app/globals.css
@@ -51,7 +51,7 @@ body {
 #volumeControl::-webkit-slider-thumb {
   -webkit-appearance: none;
 
-  /* its 0px just to hide range bullet */
+  /* its 0px just to hide range bullet in chrome/safari */
   height: 0px;
   width: 0px;
 
@@ -67,6 +67,35 @@ body {
 
 #volumeControl::-moz-range-track {
   background: var(--progress-bar-chrome-safari) !important;
+}
+
+/* Volume control on firefox */
+#volumeControl::-moz-range-track {
+  position: relative;
+  background: var(--progress-bar-firefox) !important;
+
+  /* its 0px just to hide range line on firefox */
+  width: 0px;
+  height: 0px;
+
+  cursor: pointer;
+}
+
+#volumeControl::-moz-range-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  height: 0px;
+  width: 0px;
+  border-radius: 0%;
+  background: var(--progress-bar-firefox);
+  cursor: pointer;
+  border: transparent;
+  position: relative;
+}
+
+#volumeControl::-moz-range-progress {
+  background: transparent;
+  height: 2px;
 }
 
 /* Player Range */
